exports[`devices should return clear actions 1`] = `
Object {
  "type": "mcs-lite-mobile-web/devices/CLEAR",
}
`;

exports[`devices should return fetchDeviceDetail actions 1`] = `
Object {
  "callback": [Function],
  "type": "mcs-lite-mobile-web/devices/FETCH_DEVICE_DETAIL",
}
`;

exports[`devices should return fetchDeviceList actions 1`] = `
Object {
  "callback": [Function],
  "type": "mcs-lite-mobile-web/devices/FETCH_DEVICE_LIST",
}
`;

exports[`devices should return setDeviceDetail actions 1`] = `
Object {
  "payload": Object {},
  "type": "mcs-lite-mobile-web/devices/SET_DEVICE_DETAIL",
}
`;

exports[`devices should return setDeviceList actions 1`] = `
Object {
  "payload": Array [],
  "type": "mcs-lite-mobile-web/devices/SET_DEVICE_LIST",
}
`;
